# QdrantCourse

./: README.md
materials/: LICENSE.txt  README.md  pyproject.toml
materials/src/materials/: __about__.py  connect_qdrant.ipynb  create_collection.ipynb  embedding_model.py  q_drant_client.py
materials/src/materials/day_0/: project.ipynb
materials/src/materials/day_1/: Semantic_Recommendation_System_for_Science_Fiction_Movies.ipynb  performance_optimization.ipynb  text_chunking.ipynb
materials/src/materials/day_2/: Combining Vector Search and Filtering.ipynb  HNSW Indexing Fundamentals.ipynb  hnsw_performance_tuning.ipynb  index_threshhold_VS_full_scan_threshhold.ipynb
materials/src/materials/day_3/: Dense_VS_Sparse.ipynb  Introduction_to_Qdrant_Sparse_(Neural)_Text_Retrieval_in_Qdrant.ipynb  Introduction_to_Qdrant_Sparse_Vectors_in_Qdrant.ipynb  hybrid_search.ipynb
materials/src/materials/day_4/: Accuracy Recovery with Rescoring.ipynb  Data Injestion Examples.ipynb  Explanation - Accuracy Recovery with Rescoring.ipynb  Explanation - Data Injestion.ipynb  on_disk.ipynb  quantization_explanation.ipynb  quantization_methods.ipynb
materials/src/materials/day_5/: colbert_multivetores.ipynb  quando_usar.ipynb  universal_query_demo.ipynb
materials/tests/: __init__.py
